--- a/charity-events-project/api-server/package.json
+++ b/charity-events-project/api-server/package.json
@@ -1,29 +1,45 @@
 {
   "name": "charity-events-api",
   "version": "1.0.0",
-  "description": "RESTful API for charity events management",
+  "description": "RESTful API for charity events management - PROG2002 Assessment 2",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest --verbose",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [
     "charity",
     "events",
     "api",
-    "restful"
+    "restful",
+    "express",
+    "mysql",
+    "prog2002"
   ],
-  "author": "Your Name",
+  "author": "Xinxin Yang",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "mysql2": "^3.15.1"
   },
   "devDependencies": {
+    "eslint": "^8.52.0",
+    "eslint-config-standard": "^17.1.0",
     "jest": "^29.6.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
